--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "lint": "turbo run lint --parallel --filter=./packages/**/*",
         "type-check": "turbo run type-check --parallel --filter=./packages/**/*",
         "commit-check": "commitlint --from=HEAD~1 --verbose",
-        "dev": "turbo run dev --filter=./packages/* --parallel --no-cache",
+        "dev": "turbo run dev --filter=./packages/* --no-cache --force --concurrency=30",
         "clean": "rm -rf package-lock.json && rm -rf node_modules && rm -rf ./packages/**/*dist && rm -rf ./{examples,packages}/**/*node_modules && rm -rf ./{examples,packages}/**/*.turbo"
     },
     "repository": {
