--- a/packages/extractor.webpack/tsconfig.json
+++ b/packages/extractor.webpack/tsconfig.json
@@ -12,10 +12,7 @@
     ],
     "references": [
         {
-            "path": "../css"
-        },
-        {
-            "path": "../validator"
+            "path": "../extractor"
         }
     ]
 }
