--- a/packages/theme-service/tsconfig.json
+++ b/packages/theme-service/tsconfig.json
@@ -1,12 +1,13 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
+        "composite": true,
         "baseUrl": ".",
         "rootDir": "src"
     },
     "include": [
         "src/**/*"
-     ],
+    ],
     "exclude": [
         "src/**/*.test.*"
     ]
