--- a/packages/class-variant/package.json
+++ b/packages/class-variant/package.json
@@ -2,7 +2,7 @@
     "name": "class-variant",
     "scripts": {
         "build": "techor-pack",
-        "dev": "npm run build -- --watch --no-declare",
+        "dev": "npm run build -- --watch",
         "type-check": "tsc --noEmit",
         "lint": "eslint src",
         "test": "jest"
