--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -2,7 +2,7 @@
     "name": "@master/css",
     "scripts": {
         "build": "techor-pack",
-        "dev": "npm run build -- --watch --no-declare",
+        "dev": "npm run build -- --watch",
         "test": "jest",
         "type-check": "tsc --noEmit",
         "lint": "eslint src"
