--- a/packages/language-server/package.json
+++ b/packages/language-server/package.json
@@ -2,7 +2,7 @@
     "name": "@master/css-language-server",
     "scripts": {
         "build": "techor-pack --platform node",
-        "dev": "npm run build -- --watch --no-declare",
+        "dev": "npm run build -- --watch",
         "type-check": "tsc --noEmit",
         "lint": "eslint src",
         "test": "jest"
