--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "concurrently": "^8.2.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "fast-glob": "^3.2.12",
+        "fs-extra": "^11.1.1",
         "jest-extended": "^4.0.0",
         "nodemon": "^2.0.22",
         "pretty-ms": "^8.0.0",
