--- a/packages/extractor.vite/package.json
+++ b/packages/extractor.vite/package.json
@@ -46,6 +46,7 @@
     "dependencies": {
         "@master/css": "",
         "@master/css-extractor": "",
+        "lodash.debounce": "^4.0.8",
         "upath": "^2.0.1"
     }
 }
