Fix(Extractor Vite): HMR will not be performed after modifying `master.css.js`

--- a/packages/css/tsconfig.json
+++ b/packages/css/tsconfig.json
@@ -5,7 +5,8 @@
         "rootDir": "src"
     },
     "include": [
-        "src/**/*"
+        "src/**/*",
+        "../../shared/utils/delay.ts"
     ],
     "exclude": [
         "src/**/*.test.*"
