--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -5,7 +5,7 @@
         "dev": "npm run build -- --watch",
         "lint": "eslint ./src",
         "type-check": "tsc --noEmit",
-        "test": "jest --forceExit --detectOpenHandles"
+        "test": "jest"
     },
     "license": "MIT",
     "description": "Pre-renders Master CSS class syntax in HTML",
