--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
         "postinstall": "husky install && npm ls --link=true",
         "build": "npm run build:packages && npm run build:examples",
         "build:packages": "turbo run build --filter=./packages/**/* && npm i",
-        "build:examples": "turbo run build --filter=./examples/**/*",
-        "build:clean": "rm -rf ./packages/**/*dist && turbo run build --force --no-cache",
+        "build:examples": "turbo run build --filter=./examples/**/* --parallel --concurrency=30",
         "check": "npm run commit-check && npm run build && turbo run test lint type-check --parallel --filter=./packages/**/*",
         "test": "turbo run test --parallel --filter=./packages/**/*",
         "lint": "turbo run lint --parallel --filter=./packages/**/*",
