--- a/packages/extractor/package.json
+++ b/packages/extractor/package.json
@@ -5,7 +5,7 @@
         "dev": "npm run build -- --watch",
         "lint": "eslint ./src",
         "type-check": "tsc --noEmit",
-        "test": "jest"
+        "test": "jest -i"
     },
     "license": "MIT",
     "description": "Master CSS static extractor for various raw text",
