--- a/packages/extractor.vite/package.json
+++ b/packages/extractor.vite/package.json
@@ -5,7 +5,7 @@
         "dev": "npm run build -- --watch",
         "type-check": "tsc --noEmit",
         "lint": "eslint src",
-        "test": "jest -i --forceExit --detectOpenHandles"
+        "test": "jest"
     },
     "license": "MIT",
     "description": "Integrate Master CSS Static Extraction in Vite way",
