--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,14 +11,14 @@ jobs:
         runs-on: ubuntu-20.04
         strategy:
             matrix:
-                node-version: [18.16.1]
+                node-version: [18]
         steps:
             - uses: actions/checkout@v3
             - uses: actions/setup-node@v3
               with:
                   node-version: ${{ matrix.node-version }}
-                  registry-url: 'https://registry.npmjs.org'
-                  cache: 'npm'
+                  registry-url: "https://registry.npmjs.org"
+                  cache: "npm"
             - run: npm ci
             - run: npm run build
 
