--- a/.github/workflows/sync-dev-branches.yml
+++ b/.github/workflows/sync-dev-branches.yml
@@ -2,7 +2,7 @@ name: Sync dev branches
 on:
     push:
         branches:
-            - '*'
+            - "*"
 
 jobs:
     check:
@@ -10,12 +10,12 @@ jobs:
         runs-on: ubuntu-20.04
         strategy:
             matrix:
-                node-version: [18.16.1]
+                node-version: [18]
         steps:
             - uses: actions/checkout@v3
             - name: Aron Actions
               uses: 1aron/aronrepo@v1.0.0-beta.49
               with:
-                  action: 'sync-dev-branches'
+                  action: "sync-dev-branches"
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
