--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Test
 on:
     push:
         branches:
-            - '**'
+            - "**"
     pull_request_target:
         types:
             - opened
@@ -16,15 +16,15 @@ jobs:
         runs-on: ${{ matrix.os }}
         strategy:
             matrix:
-                node-version: [18.16.1]
-                os: [ubuntu-latest, windows-latest]
+                node-version: [18]
+                os: [ubuntu-latest, windows-latest, macos-latest]
 
         steps:
             - uses: actions/checkout@v3
             - uses: actions/setup-node@v3
               with:
                   node-version: ${{ matrix.node-version }}
-                  cache: 'npm'
+                  cache: "npm"
             - run: npm ci
             - run: npm run build
             - run: npm run test
