--- a/packages/class-variant/package.json
+++ b/packages/class-variant/package.json
@@ -1,7 +1,7 @@
 {
     "name": "class-variant",
     "scripts": {
-        "build": "techor-pack",
+        "build": "techor pack",
         "dev": "npm run build -- --watch",
         "type-check": "tsc --noEmit",
         "lint": "eslint src",
