--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@master/css.react",
     "scripts": {
-        "build": "techor-pack --bundle",
+        "build": "techor pack --bundle",
         "dev": "npm run build -- --watch",
         "type-check": "tsc --noEmit",
         "lint": "eslint src",
