--- a/packages/theme-service/package.json
+++ b/packages/theme-service/package.json
@@ -1,7 +1,7 @@
 {
     "name": "theme-service",
     "scripts": {
-        "build": "techor-pack",
+        "build": "techor pack",
         "dev": "npm run build -- --watch",
         "test": "jest",
         "type-check": "tsc --noEmit",
@@ -53,6 +53,6 @@
         "access": "public"
     },
     "devDependencies": {
-        "@techor/extend": "^2.3.8"
+        "@techor/extend": "^2.4.0"
     }
 }
