--- a/packages/vscode-language-service/package.json
+++ b/packages/vscode-language-service/package.json
@@ -1,7 +1,7 @@
 {
     "name": "master-css-vscode-language-service",
     "scripts": {
-        "build": "techor-pack --platform node",
+        "build": "techor pack --platform node",
         "dev": "npm run build -- --watch",
         "type-check": "tsc --noEmit",
         "lint": "eslint src",
