--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
         "ts-dedent": "^2.2.0",
         "ts-jest": "^29.1.1",
         "tsx": "^3.12.7",
-        "turbo": "^1.10.7",
-        "upath": "^2.0.1"
+        "turbo": "^1.10.7"
     },
     "engines": {
         "node": "^18"
