--- a/examples/astro-with-runtime-rendering/package.json
+++ b/examples/astro-with-runtime-rendering/package.json
@@ -1,5 +1,6 @@
 {
     "name": "astro-with-runtime-rendering",
+    "private": true,
     "type": "module",
     "version": "0.0.1",
     "scripts": {
