--- a/examples/webpack-with-static-extraction/package.json
+++ b/examples/webpack-with-static-extraction/package.json
@@ -1,5 +1,6 @@
 {
     "name": "webpack-with-static-extraction",
+    "private": true,
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
