--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -4,7 +4,7 @@
         "build:esm": "techor pack './src/**/*.{ts,vue}' --bundle --format esm --esm-ext .js --entry-names [dir]/[name] --no-declare",
         "build:type": "vue-tsc --declaration --emitDeclarationOnly",
         "build": "npm run build:esm && npm run build:type",
-        "dev": "npm run build:* -- --watch",
+        "dev": "conc 'npm:build:* -- --watch'",
         "type-check": "vue-tsc --noEmit",
         "lint": "eslint src"
     },
