--- a/examples/webpack-with-runtime-rendering/package.json
+++ b/examples/webpack-with-runtime-rendering/package.json
@@ -5,8 +5,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "npm run dev",
-        "dev": "npx webpack serve",
+        "dev": "webpack serve --mode development",
         "build": "webpack --mode production"
     },
     "keywords": [],
