--- a/examples/webpack-with-static-extraction/package.json
+++ b/examples/webpack-with-static-extraction/package.json
@@ -5,10 +5,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "npm run preview",
-        "build": "webpack --mode=production --node-env=production",
-        "dev": "webpack serve --mode=development",
-        "preview": "webpack serve --mode=production"
+        "dev": "webpack serve --mode development",
+        "build": "webpack --mode production"
     },
     "keywords": [],
     "author": "",
