--- a/examples/laravel-with-static-extraction/vercel.json
+++ b/examples/laravel-with-static-extraction/vercel.json
@@ -12,10 +12,10 @@
         }
     ],
     "env": {
-        "APP_NAME": "laravel-with-runtime-rendering",
+        "APP_NAME": "laravel-with-static-extraction",
         "APP_ENV": "production",
         "APP_DEBUG": "false",
-        "APP_URL": "https://laravel.rr.beta.css.master.co",
+        "APP_URL": "https://laravel.se.beta.css.master.co",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
