--- a/packages/language-service/package.json
+++ b/packages/language-service/package.json
@@ -13,6 +13,7 @@
         "node": "*"
     },
     "dependencies": {
+        "@babel/parser": "^7.22.7",
         "@master/css": "",
         "js-beautify": "^1.14.7"
     },
