--- a/examples/nuxt.js-with-runtime-rendering/package.json
+++ b/examples/nuxt.js-with-runtime-rendering/package.json
@@ -9,7 +9,7 @@
         "postinstall": "nuxt prepare"
     },
     "dependencies": {
-        "@master/css.vue": ""
+        "@master/css.vue": "workspace:*"
     },
     "devDependencies": {
         "@types/node": "^18",
