--- a/packages/language-server/package.json
+++ b/packages/language-server/package.json
@@ -10,12 +10,9 @@
     "description": "Master CSS Language Server",
     "author": "Aoyue Design LLC.",
     "license": "MIT",
-    "engines": {
-        "node": "*"
-    },
     "dependencies": {
-        "@master/css": "",
-        "@master/css-language-service": "",
+        "@master/css": "workspace:*",
+        "@master/css-language-service": "workspace:*",
         "explore-config": "^2.2.10",
         "js-beautify": "^1.14.7",
         "minimatch": "^9.0.1",
