--- a/packages/server.nitro/package.json
+++ b/packages/server.nitro/package.json
@@ -50,6 +50,6 @@
         "access": "public"
     },
     "dependencies": {
-        "@master/css": ""
+        "@master/css": "workspace:*"
     }
 }
