--- a/packages/vscode-language-service/package.json
+++ b/packages/vscode-language-service/package.json
@@ -182,14 +182,11 @@
     "publishConfig": {
         "access": "public"
     },
-    "peerDependencies": {
-        "vscode": ""
-    },
     "devDependencies": {
-        "@master/css-language-server": "",
-        "vsce": "^2.15.0",
+        "@master/css-language-server": "workspace:*",
+        "@vscode/vsce": "^2.20.0",
         "@types/vscode": "^1.63.0",
-        "@vscode/test-electron": "^2.1.2",
+        "@vscode/test-electron": "^2.3.4",
         "vscode-languageclient": "^7.0.0"
     }
 }
