--- a/examples/angular-with-runtime-rendering/package.json
+++ b/examples/angular-with-runtime-rendering/package.json
@@ -18,7 +18,7 @@
         "@angular/platform-browser": "^16.0.0",
         "@angular/platform-browser-dynamic": "^16.0.0",
         "@angular/router": "^16.0.0",
-        "@master/css": "",
+        "@master/css": "workspace:*",
         "rxjs": "~7.8.0",
         "tslib": "^2.3.0",
         "zone.js": "~0.13.0"
