--- a/examples/astro-with-static-extraction/package.json
+++ b/examples/astro-with-static-extraction/package.json
@@ -14,6 +14,6 @@
         "astro": "^2.8.3"
     },
     "devDependencies": {
-        "@master/css-extractor.vite": ""
+        "@master/css-extractor.vite": "workspace:*"
     }
 }
