--- a/examples/laravel-with-runtime-rendering/package.json
+++ b/examples/laravel-with-runtime-rendering/package.json
@@ -12,6 +12,6 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "@master/css": ""
+        "@master/css": "workspace:*"
     }
 }
