--- a/examples/next.js-with-progressive-rendering/package.json
+++ b/examples/next.js-with-progressive-rendering/package.json
@@ -9,8 +9,8 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@master/css-renderer": "",
-        "@master/css.react": "",
+        "@master/css-renderer": "workspace:*",
+        "@master/css.react": "workspace:*",
         "@types/node": "^20.2.5",
         "@types/react": "^18.2.8",
         "@types/react-dom": "^18.2.4",
