--- a/examples/react-with-static-extraction/package.json
+++ b/examples/react-with-static-extraction/package.json
@@ -13,7 +13,7 @@
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
-        "@master/css-extractor.vite": "",
+        "@master/css-extractor.vite": "workspace:*",
         "@types/react": "^18.0.37",
         "@types/react-dom": "^18.0.11",
         "@typescript-eslint/eslint-plugin": "^5.59.0",
