--- a/examples/svelte-with-progressive-rendering/package.json
+++ b/examples/svelte-with-progressive-rendering/package.json
@@ -10,7 +10,7 @@
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
     },
     "dependencies": {
-        "@master/css.svelte": ""
+        "@master/css.svelte": "workspace:*"
     },
     "devDependencies": {
         "@fontsource/fira-mono": "^4.5.10",
