--- a/examples/vite-with-runtime-rendering/package.json
+++ b/examples/vite-with-runtime-rendering/package.json
@@ -13,6 +13,6 @@
         "vite": "^4.3.9"
     },
     "dependencies": {
-        "@master/css": ""
+        "@master/css": "workspace:*"
     }
 }
