--- a/examples/vue.js-with-progressive-rendering/package.json
+++ b/examples/vue.js-with-progressive-rendering/package.json
@@ -15,7 +15,7 @@
         "debug": "node --inspect-brk server"
     },
     "dependencies": {
-        "@master/css.vue": "",
+        "@master/css.vue": "workspace:*",
         "pinia": "^2.1.4",
         "server-static": "^2.0.5",
         "vue": "^3.3.4",
