--- a/examples/vue.js-with-runtime-rendering/package.json
+++ b/examples/vue.js-with-runtime-rendering/package.json
@@ -11,7 +11,7 @@
         "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
     },
     "dependencies": {
-        "@master/css.vue": "",
+        "@master/css.vue": "workspace:*",
         "vue": "^3.3.4"
     },
     "devDependencies": {
