--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -69,7 +69,7 @@
         "access": "public"
     },
     "dependencies": {
-        "@master/normal.css": "",
+        "@master/normal.css": "workspace:*",
         "@techor/fs": "^2.4.1",
         "@techor/log": "^2.4.1",
         "commander": "^11.0.0"
@@ -77,7 +77,7 @@
     "devDependencies": {
         "@techor/extend": "^2.4.1",
         "csstype": "^3.1.2",
-        "shared": "",
+        "shared": "workspace:*",
         "vite": "^4.2.1"
     }
 }
