--- a/packages/extractor.vite/package.json
+++ b/packages/extractor.vite/package.json
@@ -44,8 +44,8 @@
         "vite": ">=3.0.0"
     },
     "dependencies": {
-        "@master/css": "",
-        "@master/css-extractor": "",
+        "@master/css": "workspace:*",
+        "@master/css-extractor": "workspace:*",
         "lodash.debounce": "^4.0.8"
     }
 }
